--- a/public/index.html
+++ b/public/index.html
@@ -31,12 +31,12 @@
 </head>
 
 <body>
-  <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-firestore.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-storage.js"></script>
+  <script defer src="https://www.gstatic.com/firebasejs/8.6.5/firebase-app.js"></script>
+  <script defer src="https://www.gstatic.com/firebasejs/8.6.5/firebase-auth.js"></script>
+  <script defer src="https://www.gstatic.com/firebasejs/8.6.5/firebase-firestore.js"></script>
+  <script defer src="https://www.gstatic.com/firebasejs/8.6.5/firebase-storage.js"></script>
   <script>
-  
+   
   </script>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
